examples/test/testpolicy7876.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7876
  namespace: namespace6
spec:
  podSelector:
    matchLabels:
      key48: value7
      key35: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value31
          key25: value18
          key44: value4
      podSelector:
        matchLabels:
          key1: value23
          key10: value24
